# Stash

./: .gitignore  Makefile  README.md  package-lock.json  package.json  playwright-native.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
e2e/: contacts.spec.ts  directory.spec.ts  discover.spec.ts  health.spec.ts  helpers.ts  navigation.spec.ts  settings.spec.ts  tauri-mock.ts  unlock.spec.ts  vaults.spec.ts
e2e-native/: navigation.spec.ts  settings.spec.ts  unlock.spec.ts  vaults.spec.ts
helpers/apple-signin/: build.sh  main.swift  stash-apple-signin
mobile/: app.json  metro.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx  directory.tsx  health.tsx  index.tsx  people.tsx  settings.tsx
mobile/ios/: Podfile
native/StashBar/: .gitignore  Package.swift
relay/: Cargo.toml  relay.example.toml
relay/src/: auth.rs  config.rs  db.rs  main.rs  middleware.rs
relay/src/routes/: actions.rs  auth.rs  health_check.rs  mod.rs  projects.rs  sync.rs
resources/: com.mattssoftware.stash-daemon.plist
src/: App.css  App.tsx  i18n.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/helpers/: stash-touchid  touchid.swift
src-tauri/icons/: icon.icns
src-tauri/scripts/: post-build.sh
src-tauri/src/: config.rs  env_parser.rs  helpers.rs  lib.rs  profile_manager.rs  scanner.rs  session.rs  state.rs  team.rs  vault.rs
src-tauri/src/commands/: cli.rs  config.rs  contacts.rs  health.rs  mod.rs  profiles.rs  projects.rs  relay.rs  saved_keys.rs  scanner.rs  team.rs  vault.rs
src-tauri/tests/: cli_tests.rs
src/components/: ConfirmDialog.css  ConfirmDialog.tsx  DiffView.css  DiffView.tsx  EnvEditor.css  EnvEditor.tsx  EnvVarRow.css  EnvVarRow.tsx  EnvWizard.css  EnvWizard.tsx  FrameworkChip.css  FrameworkChip.tsx  GitBanner.css  GitBanner.tsx  IdentityPrompt.css  IdentityPrompt.tsx  ImportDialog.css  ImportDialog.tsx  InfoGuide.css  InfoGuide.tsx  ProfileSwitcher.css  ProfileSwitcher.tsx  ProjectIcon.css  ProjectIcon.tsx  ProjectSettings.css  ProjectSettings.tsx  PullPreviewDialog.css  PullPreviewDialog.tsx  ScanBanner.css  ScanBanner.tsx  ServiceCard.css  ServiceCard.tsx  SetupWizard.css  SetupWizard.tsx  ShareWizard.css  ShareWizard.tsx  StashLockPanel.css  StashLockPanel.tsx  StashSetupBanner.css  StashSetupBanner.tsx  (+11 more)
src/constants/: navigation.ts
src/contexts/: ToastContext.tsx
src/data/: api-catalog.json  framework-colors.ts  framework-suggestions.ts  profile-colors.ts
src/hooks/: useContacts.ts  useDeepLinks.ts  useDevelopers.ts  useDirectory.ts  useHealth.ts  useLockMetadata.ts  usePeople.ts  useProfiles.ts  useProjects.ts  useSavedKeys.ts  useScanner.ts  useTeam.ts  useToast.ts  useUpdater.ts  useVault.ts
src/locales/: bn.json  en.json  gu.json  hi.json  ja.json  kn.json  ko.json  ml.json  mr.json  pa.json  pl.json  ta.json  te.json  uk.json  zh.json
src/pages/: ContactsPage.css  ContactsPage.tsx  DevelopersPage.css  DevelopersPage.tsx  DirectoryPage.css  DirectoryPage.tsx  DiscoverPage.css  DiscoverPage.tsx  HealthPage.css  HealthPage.tsx  PeoplePage.css  PeoplePage.tsx  SavedKeysPage.css  SavedKeysPage.tsx  SettingsPage.css  SettingsPage.tsx  VaultsPage.css  VaultsPage.tsx
src/test/: base-mocks.ts  mocks.ts  setup.ts
src/utils/: validation.ts
test-results/: .last-run.json
test-results/navigation-Navigation-Nati-99bb0--sidebar-with-all-nav-items/: error-context.md
test-results/navigation-Navigation-Nati-d4510-and-return-to-unlock-screen/: error-context.md
test-results/navigation-Navigation-Native-can-navigate-to-each-page/: error-context.md
test-results/navigation-Navigation-Native-defaults-to-Vaults-page/: error-context.md
test-results/settings-Settings-Page-Nat-4b3bc-tion-with-real-vault-status/: error-context.md
test-results/settings-Settings-Page-Nat-bbc06-th-working-dark-mode-toggle/: error-context.md
watch/: create-project.sh  project.yml
watch/Stash Watch App/: ContentView.swift  Stash Watch App.entitlements  (+1 more)
(+64 files in other folders)
