[package]
name = "stash"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "stash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
# keyring removed — Touch ID key stored in local file, protected by biometric prompt

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "stash-cli"
path = "src/bin/stash-cli.rs"

